public/css/main.css
/* ... */
@media only screen and (max-width: 768px) {
	header {
		background: black;
		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
	}

	header .row {
		width: 100%;
	}

	header .logo {
		margin-left: -30px;
	}
}

/* primary navigation
--------------------------------------------------------------------- */
#nav-wrap,
#nav-wrap ul,
#nav-wrap li,
#nav-wrap a {
	margin: 0;
	padding: 0;
}

/* nav-wrap */
#nav-wrap {
	font: 13px "raleway-heavy", sans-serif;
	text-transform: uppercase;
	letter-spacing: 1.5px;
	float: left;
}

/* hide toggle button */
#nav-wrap > a {
	display: none;
}

ul#nav {
	min-height: 66px;
	display: inline-block;
	width: auto;

	/* left align the menu */
	text-align: left;
}

ul#nav li {
	position: relative;
	list-style: none;
	display: inline-block;
	height: 66px;
}

/* Links */
ul#nav li a {
	/* 14px padding top + 14px padding bottom + 38px line-height = 66px */
	display: block;
	padding: 14px 12px;
	line-height: 38px;
	text-decoration: none;
	text-align: left;
	color: #ffffff;
	position: relative;
	-moz-transition: color 0.2s ease-in-out;
	-o-transition: color 0.2s ease-in-out;
	-webkit-transition: color 0.2s ease-in-out;
	-ms-transition: color 0.2s ease-in-out;
	transition: color 0.2s ease-in-out;
}

ul#nav li a:hover {
	color: #3cdce8;
}

ul#nav li a:active {
	background-color: transparent !important;
}

ul#nav li.current a {
	color: #3cdce8;
}

ul#nav li.current a:after {
	position: absolute;
	left: 50%;
	bottom: 0;
	width: 40px;
	height: 2px;
	margin-left: -23px;
	background-color: white;
	content: "\0020";
	display: block;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	-webkit-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}

/* mobile navigation
--------------------------------------------------------------------- */
@media only screen and (max-width: 768px) {
	#nav-wrap {
		z-index: 700;
		display: block;
		width: 100%;
		float: none;
		position: absolute;
		top: 0;
		right: 0;
	}

	/* mobile-btn and toggle-btn */
	#nav-wrap > a {
		border: none;
		color: #ffffff;
		height: 40px;
		min-width: 40px;
		font-size: 12px;
		text-align: left;
		float: right;
		display: block;
		padding: 0;
		position: relative;
		top: 13px;
		right: 20px;
	}

	#nav-wrap > a:hover .menu-icon {
		background: #ffffff;
	}

	#nav-wrap .menu-icon {
		display: inline-block;
		width: 24px;
		height: 3px;
		margin-top: -3px;
		position: absolute;
		right: 8px;
		top: 50%;
		bottom: auto;
		left: auto;
		background: #3cdce8;
		-moz-transition: all 0.3s ease-in-out;
		-o-transition: all 0.3s ease-in-out;
		-webkit-transition: all 0.3s ease-in-out;
		-ms-transition: all 0.3s ease-in-out;
		transition: all 0.3s ease-in-out;
		font: 0/0 a;
		text-shadow: none;
		color: transparent;
	}

	#nav-wrap .menu-icon:before,
	#nav-wrap .menu-icon:after {
		content: "";
		width: 100%;
		height: 100%;
		position: absolute;
		background-color: inherit;
		left: 0;
	}

	#nav-wrap .menu-icon:before {
		bottom: 8px;
	}

	#nav-wrap .menu-icon:after {
		top: 8px;
	}

	/* dropdown nav */
	#nav-wrap ul#nav {
		background: #1c212a;
		padding: 54px 45px 60px;
		margin: 0;
		height: auto;
		display: none;
		clear: both;
		width: 100%;
		float: none;
		position: absolute;
		top: 66px;
		right: 0;
	}

	#nav-wrap ul#nav > li {
		display: block;
		float: none;
		height: auto;
		text-align: left;
		border-bottom: 1px dotted rgba(200, 200, 200, 0.1);
		padding: 6px 0;
	}

	#nav-wrap ul#nav > li:first-child {
		border-top: 1px dotted rgba(200, 200, 200, 0.1);
	}

	#nav-wrap ul#nav li a {
		display: block;
		width: auto;
		padding: 0;
		color: #cacbcb;
		padding: 12px 0;
		line-height: 16px;
		border: none;
	}

	#nav-wrap ul#nav li a:hover {
		color: #ffffff;
	}

	#nav-wrap ul#nav li.current > a {
		background: none;
		color: #3cdce8;
	}

	#nav-wrap ul#nav li.current > a:after {
		display: none;
	}

	#nav-wrap a.mobile-btn {
		display: none;
	}

	.js #nav-wrap a#toggle-btn {
		display: block;
	}

	/* if js is disabled */
	.no-js #nav-wrap:not(:target) > a:first-of-type,
	.no-js #nav-wrap:target > a:last-of-type {
		display: block;
	}

	.no-js #nav-wrap:target ul#nav {
		display: block;
	}
}

/* make sure the menu is visible on larger screens
--------------------------------------------------------------------- */
@media only screen and (min-width: 769px) {
	#nav-wrap ul#nav {
		display: block !important;
	}
}

/*
/* 07. =hero section
/* =================================================================== */

#hero {
	background: #0f1215 url(../images/hero-bg.jpg) no-repeat center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	min-height: 630px;
	width: 100%;
	text-align: left;
	position: relative;
	border-bottom: 1px solid #15191d;
}

.hero-content {
	position: relative;
	padding-top: 66px;
	padding-bottom: 102px;
}

/* hero slider */
#hero-slider {
	margin: 120px 0 54px;
}

#hero-slider .slides .flex-caption {
	margin: 0 35% 0 30px;
}

#hero-slider .slides .flex-caption h1 {
	font: 49px/1.3 "raleway-bold", sans-serif;
	letter-spacing: -1px;
	padding-bottom: 24px;
	color: white;
	text-shadow: 0 1px 20px rgba(0, 0, 0, 0.6);
	position: relative;

	/* for css animations */
	filter: alpha(opacity=0);
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
	opacity: 0;
	zoom: 1;
}

#hero-slider .slides .flex-caption h1::after {
	display: block;
	background-color: #3cdce8;
	width: 100px;
	height: 3px;
	content: "\0020";
	position: absolute;
	left: 0;
	bottom: 0;
}

#hero-slider .slides .flex-caption h3 {
	font: 18px/1.9 "merriweather-light", sans-serif;
	color: rgba(255, 255, 255, 0.7);
	text-shadow: 0 1px 15px rgba(0, 0, 0, 0.5);
	width: 85%;
	margin-top: 24px;

	/* for css animations */
	filter: alpha(opacity=0);
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
	opacity: 0;
	zoom: 1;
}
/* ... */

